# AP2025_openCV

./: .gitignore  README.md  camera.md  final.md  preparation.md
01/: CMakeLists.txt  first_opencv.md  opencvTest_b_c.cpp  opencvTest_blur.cpp  opencvTest_first.cpp  opencvTest_trackbar.cpp  opencvTest_trackbar_callback.cpp  opencvTest_trackbar_full.cpp
02/: CMakeLists.txt  opencvTest_gray.cpp  opencvTest_key.cpp  opencvTest_movie.cpp  opencvTest_movie_blur.cpp  opencvTest_movie_full.cpp  opencvTest_movie_pos.cpp  second_opencv.md
03/: CMakeLists.txt  opencvTest_back.cpp  opencvTest_back2.cpp  opencvTest_binary.cpp  opencvTest_color.cpp  opencvTest_colorHSV.cpp  opencvTest_mask.cpp  third_opencv.md
04/: CMakeLists.txt  forth_opencv.md  opencvTest_area.cpp  opencvTest_contour_moment.cpp  opencvTest_contour_rectangle.cpp  opencvTest_findcontour.cpp
